STELLA, CHANGES

#### 0.8.0 (2009-12-??) ###############################

* FIXED: HTTP auth failures
* FIXED: Request timeouts shold count towards failures
* ADDED: follow responses can contain definition blocks
* ADDED: Support for specifying default path prefix on CLI
* ADDED: Support for specifying timeouts

* TODO: Replace runtime procs with string templates
* TODO: review cooking handling. Not always sent automatically. 
* TODO: global responses
* TODO: review :variables in URI elements

#### 0.7.7 (2009-12-05) ###############################

* FIXED: JSON parse error when nil body 
* FIXED: URI query parameter encoding
* CHANGE: Removed Stella::Testplan::Stats
* CHANGE: Better output for errors during functional tests
* CHANGE: Global variables now implemented in Stella::Testplan.global
  and can be used like usecase and request resources.
* CHANGE: Variable replacement now checks the client container 
  resources before the usecase resources. 
* ADDED: Stella::Testplan#to_json
* ADDED: Stella::Data::Helpers#read_file
* ADDED: Stella::Data::Helpers#resequential
* ADDED: Stella::Data::Helpers#path
* ADDED: no-param, no-header options
* ADDED: Follow redirects within one request definition
* ADDED: Support for specifying HTTP AUTH domain in usecase config 


#### 0.7.6 (2009-11-24) ###############################

* FIXED: httpclient fix: use full request URI (i.e. path and query string) in authentication (NOTE: SSPINegotiateAuth and NegotiateAuth not tested)
* FIXED: Use request URI in authentication domain


#### 0.7.5 (2009-11-16) ###############################

* FIXED: Correctly capture exceptions in Client
* FIXED: Issue with printing the dot (.) for the start of every usecase
* FIXED: Stats samples not cleared between background calculations
* CHANGE: Do not include testplan, usecase, or request descriptions in digest calculation
* CHANGE: Use 6 digit digest in log directory names
* CHANGE: Client aborts usecase on unhandled exceptions