@@ -4,6 +4,7 @@ STELLA, CHANGES
 
 * FIXED: HTTP auth failures
 * FIXED: Request timeouts shold count towards failures
+* FIXED: Stella::Client ID was changing between requests in certain conditions
 * ADDED: follow responses can contain definition blocks
 * ADDED: Support for specifying default path prefix on CLI
 * ADDED: Support for specifying timeouts
@@ -12,6 +13,7 @@ STELLA, CHANGES
 * TODO: review cooking handling. Not always sent automatically. 
 * TODO: global responses
 * TODO: review :variables in URI elements
+
 
 #### 0.7.7 (2009-12-05) ###############################
 
